fixed adv search form alignments

--- a/css/adv-search.css
+++ b/css/adv-search.css
@@ -70,9 +70,9 @@ div.advanced-search input[name="as-status"]:checked {
 .flex-outer > li > label {
     flex: 1 0 120px;
     max-width: 220px;
-    text-align: right;
     font-weight: bold;
-    padding-right: 20px;
+    /* text-align: right;
+    padding-right: 20px; */
 }
 
 .flex-outer > li > label + .fullwidth {
@@ -81,6 +81,15 @@ div.advanced-search input[name="as-status"]:checked {
 
 input[name="as-refreshCache"] {
     margin-right: 10px;
+}
+
+/* remove the empty labels from display */
+.flex-outer > li > label.empty {
+    margin-left: -200px;
+}
+
+.flex-outer > li > label.empty2 {
+    margin-left: -100px;
 }
 
 #mapSearch {
