--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -7,6 +7,19 @@
         --column-count: 3 !important;
     }
 
+    .flex-outer > li > label {
+        text-align: right;
+        padding-right: 20px;
+    }
+
+    .flex-outer > li > label.empty {
+        margin-left: unset;
+    }
+    
+    .flex-outer > li > label.empty2 {
+        margin-left: unset;
+    }
+
     #mapSearch {
         width: 500px;
         height: 375px;
